compiler/tools/fpp-check/test/expr_array_empty.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/expr_array_empty.fpp: 1.14
constant a = [ ]
             ^
error: array expression may not be empty
